# sndls

./: LICENSE  README.md  pyproject.toml
src/lsa/: __init__.py
src/lsa/cli/: cmd.py
src/lsa/utils/: config.py  fmt.py
src/sndls/cli/: cmd.py  main.py
src/sndls/utils/: audio.py  config.py
