[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "lsa"
authors = [{name = "Esteban Gómez", email = "esteban.gomezmellado@aalto.fi"}]
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["audio", "dataset"]
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24.3",
    "polars>=0.20.26",
    "soundfile>=0.12.1",
    "tqdm>=4.66.1"
]

[project.scripts]
"lsa" = "lsa.cli.main:main"

[project.optional-dependencies]
lint = [
    "ruff==0.1.9"
]

[tool.ruff]
extend-select = [
    "C4",
    "SIM",
    "TCH"
]
ignore-init-module-imports = true
line-length = 79

[project.urls]
Home = "https://www.github.com/eagomez2/lsa"
